fixed overflow horizontal - remove bootstrap row

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,7 +19,6 @@ body {
 }
 
 .hero {
-    width: 100vw;
     height: calc(100vh - 164px);
     background: url('/media/homepage.jpg') no-repeat center center fixed;
     background-size: cover;
@@ -29,7 +28,6 @@ body {
 }
 
 .dark-box {
-    width: 100vw;
     height: 100vh;
     background-color: #000;
     position: absolute;
